--- a/vendas.html
+++ b/vendas.html
@@ -601,7 +601,10 @@
                   </div>
                   <div class="modal-body m-5">
                     <h3 class="text-center" id="confirmar">Confirmar Venda?</h3>
-                    <div class="gif" id="gif"></div>
+                    <div class="text-center">
+                      <div class="gif" id="gif"></div>
+                    </div>
+
                   </div>
 
                   <div class="modal-footer justify-content-between">
