--- a/login.html
+++ b/login.html
@@ -92,12 +92,13 @@
                                 </div>
 
                             </form>
+                            <!--
                             <div class="register-link pb-5">
                                 <h6>
                                     Não tem uma conta?
                                     <a href="register.html" class="">Cadastre-se aqui</a>
                                 </h6>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </div>
