--- a/vendas.html
+++ b/vendas.html
@@ -269,7 +269,8 @@
 
                                 <label>Código</label>
                                 <input class="au-input au-input--full border-input form-control" type="text"
-                                  placeholder=" " id="Cod_vendas" disabled>
+                                  placeholder=" " id="codProduto" >
+                                  <small class="text-danger" id="alertProd" >Produto não encontrado</small>
                               </div>
                               <div class="row">
                                 <div class="form-group col-6">
