--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,7 @@
   </div>
   <div class="menu-sidebar__content js-scrollbar1 text-white">
     <nav class="navbar-sidebar">
-      <ul class="list-unstyled navbar__list">
+      <ul class="list-unstyled navbar__list lista">
         <li class="has-sub" id="painel">
           <a href="index.html">
             <i class="fas fa-tachometer-alt text-white"></i>Painel de Controle</a>
@@ -20,11 +20,38 @@
           <a href="estoque.html"> <i class="fas fa-box"></i>Estoque</a>
         </li>
         <li id="tabelas">
-          <a href="table.html"> <i class="fas fa-table"></i>Tabelas</a>
+          <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+            <i class="fas fa-copy"></i>Relatórios</a>
+          <ul class="collapse list-unstyled" id="pageSubmenu">
+            <li class="ml-4">
+              <a href="table.html"> <i class="fas fa-table"></i>Tabelas</a>
+            </li>
+            <li class="ml-4">
+              <a href="graficos.html"> <i class="fas fa-chart-pie"></i>Gráficos</a>
+            </li>
+            <li class="ml-4">
+              <a href="relatorios.html"> <i class="fas fa-copy"></i>Relatórios</a>
+            </li>
+          </ul>
         </li>
         <li id="cadastros">
-          <a href="cadastros.html"> <i class="fas fa-user"></i>Cadastros</a>
+
+          <a href="#pageSubmenu2" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+            <i class="fas fa-address-book"></i></i>Cadastros</a>
+          <ul class="collapse list-unstyled" id="pageSubmenu2">
+            <li class="ml-4">
+              <a href="cadastros.html"> <i class="fas fa-user"></i>Usuários</a>
+            </li>
+            <li class="ml-4">
+              <a href="contas.html"><i class="fas fa-dollar-sign"></i>Contas</a>
+            </li>
+
+          </ul>
         </li>
+        <!--
+        <li class="">
+         <a href="">Suporte</a> 
+        </li>-->
         <!--
         <li>
           <a href="clientes.html"> <i class="fas fa-user"></i>Clientes
@@ -69,7 +96,7 @@
     }
 
 
-   // let user = JSON.parse(sessionStorage.user);
+    // let user = JSON.parse(sessionStorage.user);
 
     function permissoes() {
       if (user.tipo === 1) {
