--- a/login.html
+++ b/login.html
@@ -177,8 +177,8 @@
             };
             // var post_url = "http://localhost:3000/user/login";
 
-            let post_url = "https://kd-gerenciador.herokuapp.com/user/login";
-            $("#imgLoad").show();
+       //     let post_url = "https://kd-gerenciador.herokuapp.com/user/login";
+          //  $("#imgLoad").show();
 /*
             $.ajax({
                     url: post_url,
